backend/stress-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: stress-backend-v1
  namespace: bar
  labels:
    app: stress-backend
    version: v1
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stress-backend
      version: v1
  template:
    metadata:
      labels:
        app: stress-backend
        version: v1
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: stress-backend-container
        image: stress-backend:t1
#        securityContext:
#          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8003
#      - name: fortio
#        image: fortio/fortio:latest_release
#        imagePullPolicy: Always
#        ports:
#        - containerPort: 8080
#          name: http-fortio
#        - containerPort: 8079
#          name: grpc-ping

---
apiVersion: v1
kind: Service
metadata:
  name: stress-backend
  namespace: bar
  labels:
    app: stress-backend
spec:
  selector:
    app: stress-backend
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8003
