backend/stress-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: stress-backend
  namespace: bar
spec:
  host: stress-backend.bar.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
#  - name: v2
#    labels:
#      version: v2
---
