backend/stress-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: stress-backend
  namespace: bar	
spec:
  hosts:
    - stress-backend.bar.svc.cluster.local
  http:

  - route:
    - destination:
        host: stress-backend.bar.svc.cluster.local
        subset: v1
      weight: 100
#    - destination:
#        host: authnz-backend.bar.svc.cluster.local
#        subset: v2
#        port:
#          number: 80
#      weight: 50
